# redpanda

./: .bazelrc  .gitignore  MODULE.bazel  grep_reflog.sh  kv.patch  patch_kv.diff
ansible/: availability_tool.yml  big-connections.yml  cfg_rights.yml  chaos-get-logs.yml  chaos-remove.yml  config-coredump.yml  configure-rp-bench.yml  configure-rp.yml  count-leaders.yml  create_inv.py  dbg_sym.yml  debugging.yml  deploy.yml  deploy_deb.yml  deploy_deb_no_debug.yml  deploy_deb_simple.yml  deploy_deb_v.yml  deploy_debug_symbols.yml  deps.yml  deps_debian.yml  disable-panda-proxy.yml  enable-trace.yml  free-space.yml  fresh-deploy.yml  fresh_redpanda.yml  get-benchmark-logs.yml  get-data.yml  get-kernel.yml  get-logs.yml  get-size.yml  get-status.yml  get_av_log.yml  grafana-kafka.yml  hazelcast-deploy.yml  histograms.sh  histograms_any.py  install_from_repo.yml  iotop.yml  jps.yml  kafka-connections.yml  (+61 more)
ansible/cloudalchemy.node-exporter/meta/: .galaxy_install_info
ansible/secrets/: infra-key
bazel/: install-deps.sh  setup_llvm.sh
conf/local_multi_node/: n4.yaml
examples/bench/: cmp.py  main.go
src/v/: CMakeLists.txt
src/v/bytes/: iobuf.cc
src/v/cluster/: errc.h  (+51 more)
src/v/pandoscope/: CMakeLists.txt  application.cc  application.h  commands.cc  commands.h  configuration.cc  configuration.h  executor.cc  executor.h  formatter.h  logger.cc  logger.h  main.cc  offset_translator.h  print.cc  print.h  topics.cc  topics.h  transform.cc  transform.h  types.h  utils.h
tools/: cmake_test.py  histograms.py  redpanda-gdb.py  rpcgen.py
tools/metadata_viewer/: kafka.py
(+177 files in other folders)
